--- a/EvoS.PacketAnalysis/EvoS.PacketAnalysis.csproj
+++ b/EvoS.PacketAnalysis/EvoS.PacketAnalysis.csproj
@@ -17,6 +17,7 @@
     <ItemGroup>
         <PackageReference Include="Lib.Harmony" Version="1.2.0.1" />
         <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="2.4.2" />
+        <PackageReference Include="Mono.Cecil" Version="0.11.0" />
         <PackageReference Include="System.Reflection.Emit" Version="4.3.0" />
     </ItemGroup>
 
