--- a/EvoS.PacketAnalysis/EvoS.PacketAnalysis.csproj
+++ b/EvoS.PacketAnalysis/EvoS.PacketAnalysis.csproj
@@ -27,7 +27,10 @@
 
     <ItemGroup>
         <Reference Include="0Harmony, Version=2.0.0.0, Culture=neutral, PublicKeyToken=null">
-            <HintPath>..\..\..\Harmony\Harmony\bin\Debug\netcoreapp3.0\0Harmony.dll</HintPath>
+            <HintPath Condition="Exists('..\..\..\Harmony\Harmony')">..\..\..\Harmony\Harmony\bin\Release\netcoreapp3.0\0Harmony.dll</HintPath>
+            <HintPath Condition="Exists('..\..\Harmony\Harmony')">..\..\Harmony\Harmony\bin\Release\netcoreapp3.0\0Harmony.dll</HintPath>
+            <HintPath Condition="Exists('..\Harmony\Harmony')">..\Harmony\Harmony\bin\Release\netcoreapp3.0\0Harmony.dll</HintPath>
+            <HintPath Condition="Exists('..\0Harmony.dll')">..\0Harmony.dll</HintPath>
         </Reference>
     </ItemGroup>
 
