--- a/EvoS.PacketInspector/EvoS.PacketInspector.csproj
+++ b/EvoS.PacketInspector/EvoS.PacketInspector.csproj
@@ -14,6 +14,7 @@
 
     <ItemGroup>
         <PackageReference Include="GtkSharp" Version="3.22.25.56" />
+        <PackageReference Include="nucs.JsonSettings" Version="1.0.7" />
     </ItemGroup>
 
     <ItemGroup>
