--- a/LobbyServer2/CentralServer.csproj
+++ b/LobbyServer2/CentralServer.csproj
@@ -34,6 +34,9 @@
     <None Update="Config\storeSettings.yaml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Config\developers.yaml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
