Add Database config so people do not have to guess

--- a/LobbyServer2/settings.yaml
+++ b/LobbyServer2/settings.yaml
@@ -2,3 +2,11 @@
 LobbyServerAddress: 127.0.0.1
 LobbyServerPort: 6060
 GameServerExecutable: ""
+Database:
+  Type: "Mongo" # Set to "Mongo" and fill out variables below to use database
+  URI: "localhost:27017"
+  User: "user"
+  Password: "password"
+  Database: "atlas"
+  Salt: "salt"
+  MongoDbSrv: false
