Allow to have no user or password needed, incase people do not use those and connect directly without credentials

--- a/LobbyServer2/settings.yaml
+++ b/LobbyServer2/settings.yaml
@@ -10,3 +10,4 @@ Database:
   Database: "atlas"
   Salt: "salt"
   MongoDbSrv: false
+  UseCredentials: true # Set to false to ignore user and password in database
