--- a/LobbyServer2/Config/lobby.yaml
+++ b/LobbyServer2/Config/lobby.yaml
@@ -2,20 +2,15 @@
 MOTDText: "Join the project Discord: https://discord.gg/yrZRHJaAUg"
 PatchNotesCommitsUrl: https://api.github.com/repos/Zheneq/EvoS/commits?per_page=10
 Discord:
-  Enabled: false
-  AdminChannel: # Discord Webhook for admin reports
-    Webhook: ""
-    ThreadId: # leave empty to post into the channel
+  Enabled: true
+  BotToken: "" # Enter the bots token
+  AdminChannel: 0 # Discord channel id for admin reports
   AdminEnableUserReports: true
-  AdminUserReportThreadId:
+  AdminUserReportChannelId: 0 # Discord channel id from ingame user/bug reports
   AdminEnableChatAudit: true
-  AdminChatAuditThreadId:
-  GameLogChannel:
-    Webhook: "" # Discord Webhook for game results
-    ThreadId: 
-  LobbyChannel:
-    Webhook: "" # Discord Webhook for lobby status and chat
-    ThreadId:
+  AdminChatAuditChannelId: 0
+  GameLogChannel: 0 # Discord channel Id for game results
+  LobbyChannel: 0 # Discord channel Id for lobby status and chat
   LobbyEnableChat: true
   LobbyEnableServerStatus: true
   LobbyChannelUpdatePeriodSeconds: 300
