--- a/EvoS.PacketAnalysis/EvoS.PacketAnalysis.csproj
+++ b/EvoS.PacketAnalysis/EvoS.PacketAnalysis.csproj
@@ -15,8 +15,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Lib.Harmony" Version="2.2.2" />
         <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="2.4.2" />
-        <PackageReference Include="Mono.Cecil" Version="0.11.0" />
         <PackageReference Include="System.Reflection.Emit" Version="4.3.0" />
     </ItemGroup>
 
