Allow people to select a custom game that has the pick mode Tournament Participant This will show in discord `Game Result for Tournament <map>` That is the only thing it does This will allow the launcher to link draft games (manualy) with the end result of a game and launcher can do its things

--- a/LobbyServer2/CentralServer.csproj
+++ b/LobbyServer2/CentralServer.csproj
@@ -26,6 +26,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Config\GameSubTypes\CustomDraft.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Config\GameSubTypes\DeathMatch.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
