--- a/LobbyServer2/CentralServer.csproj
+++ b/LobbyServer2/CentralServer.csproj
@@ -26,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="Config\GameSubTypes\CustomDraft.json">
+    <None Update="Config\GameSubTypes\CustomTournament.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="Config\GameSubTypes\DeathMatch.json">
